--- a/config/database.yml
+++ b/config/database.yml
@@ -3,8 +3,8 @@
 development: &defaults
   # These are the settings for repository :default
   adapter:  sqlite3
-  database: sample_development.db
- 
+  database: schema/development.db
+  
   # Add more repositories
   # repositories:
   #   repo1:
@@ -12,22 +12,22 @@ development: &defaults
   #     database: sample_1_development.db
   #   repo2:
   #     ...
- 
+
 test:
-  <<:       *defaults
-  database: sample_test.db
- 
+  <<: *defaults
+  database: schema/test.db
+  
   # repositories:
   #   repo1:
   #     database: sample_1_test.db
- 
+
 production:
-  <<:       *defaults
-  database: production.db
- 
+  <<: *defaults
+  database: schema/production.db
+  
   # repositories:
   #   repo1:
   #     database: sample_production.db
- 
+
 rake:
   <<: *defaults
